# RCM

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README  README.md  prepare_spec.sh  pyproject.toml
.github/workflows/: main.yml  pyqt6.yml  windows.yml  windows_multijobs.yml
client/: AESCipher.py  README  crv_client.py  crv_client_tk.py  crv_connect  prova.py  rcm_client.py  rcm_client_tk.py  rcm_protocol_client.py  rcm_utils.py  ssh_tunnel.py
legacy/client/: rcm_client_tk.py
legacy/server_original/: desktop_helper.py  dummy_rcm_server.py  platform_fermi.cfg  platformconfig.py  rcm_new_server.py  rcm_protocol_parser.py  rcm_server_ssh.py  test.py
legacy/spec_files/: rcm_client_tk.spec
python/: crv.py  crv_server.py  update_otp.sh
python/Desktop_setup/: paraview.sh  paraview3.14.desktop
qtclient/: README.md  createEnv.sh  pushTask1.sh  requirements.txt
qtclient/Task1/: buildJ.sh  buildPyD.sh  buildPyO.sh
qtclient/Task4/: .gitignore
qtclient/rcm-client/: logger.py  rcm.py  session_widget.py
qtclient/rcm_client/: rcm.py
rcm/client/: AESCipher.py  README.md  d3des.py  rcm_client_qt.py  rcm_client_qt.spec  rcm_client_qt.spec.bad  rcm_client_qt_onedir.spec  rcm_client_qt_onefile.spec  rcm_client_tk.py  requirements.txt
rcm/server/: baseconfig.py  dummy_rcm_scheduler.py  dummy_rcm_server.py  enumerate_interfaces.py  logger_server.py  platformconfig.py  rcm.py  rcm_base_server.py  rcm_new_server.py  rcm_newer_server.py  rcm_protocol_parser.py  rcm_protocol_server.py  rcm_server_ll.py  rcm_server_pbs.py  rcm_server_slurm.py  rcm_server_ssh.py  versionRCM.cfg  versionconfig.py
rcm/utils/: __init__.py  cascade_yaml_config.py  error.py  executable.py  jobscript_composer_base.py  misc.py  mytemplate.py  scheduler_base.py  scheduler_pbs.py  scheduler_slurm.py
scripts/: external_hook.py  install_local_python.ps1  platform_version.py  release_checksum.py  trace.sh  tracehandler.py  update_otp.sh
scripts/ci/: 01-setup-pyenv.ps1  01-setup-pyenv.sh  02-install-python.ps1  02-install-python.sh  03-install-venv.ps1  03-install-venv.sh  04-install-turbovnc-linux.sh  04a-extract-turbovnc-ubuntu.sh  04a-extract-turbovnc.ps1  04b-patch-turbovnc-linux.sh  04b-patch-turbovnc.ps1  05-extract-step-linux.sh  05-extract-step.ps1  05-patch-turbovnc-linux.sh  06-install-step-linux.sh  Dockerfile  common_vars.yaml  configure_step_CINECA.ps1  extract_turbovnc.ps1  install_local_git.ps1  install_local_python.ps1  install_local_step.ps1  install_local_venv.ps1  setup.ps1  (+1 more)
server/: crv.py  crv_connect  crv_server.py  desktop_helper.py  dummy_rcm_scheduler.py  dummy_rcm_server.py  enumerate_interfaces.py  lenta1.qsub  platform_aux.cfg  platform_eurora.cfg  platform_fermi.cfg  platform_hpc1-eni.cfg  platform_om10.cfg  platform_pico.cfg  platform_plx.cfg  platformconfig.py  rcm.py  rcm_base_server.py  rcm_config.py  rcm_new_server.py  rcm_protocol_parser.py  rcm_protocol_server.py  rcm_server.py  rcm_server_ll.py  rcm_server_pbs.py  rcm_server_slurm.py  rcm_server_ssh.py  test.py
spec_files/: crv_client_tk.spec  rcm_client_tk.spec
tests/: test.py  test_hierarchical.sh  test_server_api.py
(+181 files in other folders)
